--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: ArchGuard
-subtitle: 助力遗留现代化
+# subtitle: Everything as code, every code could be guard
 email: qian.ping@thoughtworks.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
