--- a/_config.yml
+++ b/_config.yml
@@ -21,19 +21,30 @@
 title: ArchGuard
 # subtitle: Everything as code, every code could be guard
 email: qian.ping@thoughtworks.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+description: Everything as code, every code could be guard
+baseurl: "/arch-guard" # the subpath of your site, e.g. /blog
+url: "https://abigail830.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
 # Build settings
 theme: minimal-mistakes-jekyll
+minimal_mistakes_skin: dark
 plugins:
   - jekyll-feed
+
+
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      read_time: true
+      comments: true
+      related: true
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
