--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,11 @@ title: ArchGuard
 email: qian.ping@thoughtworks.com
 description: Everything as code, every code could be guard
 baseurl: "/arch-guard" # the subpath of your site, e.g. /blog
-url: "https://abigail830.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "abigail830.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  abigail830
+
+repository: "abigail830/arch-guard"
 
 # Build settings
 theme: minimal-mistakes-jekyll
