--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ repository: "abigail830/arch-guard"
 
 # Build settings
 theme: minimal-mistakes-jekyll
-minimal_mistakes_skin: dark
+# minimal_mistakes_skin: dark
 plugins:
   - jekyll-feed
 
