--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,26 @@
 main:
   - title: "ArchGuard"
     url: /
+  - title: "策略·模式·原则"
+    url: /models/evaluate-strategic/
   - title: "操作手册"
     url: /manuals/env-prepare/
   - title: "关于我们"
     url: /about/
+
+models:
+  - title: 评估
+    children:
+      - title: "评估策略"
+        url: /models/evaluate-strategic/
+      - title: "评估模型"
+        url: /models/evaluate-models/
+      - title: "评估原则"
+        url: /models/evaluate-rules/
+  - title: 改造
+    children:
+      - title: "改造策略"
+        url: /models/transform-strategic/
 
 docs:
   - title: Getting Started
