--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,16 +11,20 @@ main:
 models:
   - title: 评估
     children:
-      - title: "评估策略"
-        url: /models/evaluate-strategic/
-      - title: "评估模型"
-        url: /models/evaluate-models/
       - title: "评估原则"
         url: /models/evaluate-rules/
+      - title: "评估模型"
+        url: /models/evaluate-models/
+      - title: "评估策略"
+        url: /models/evaluate-strategic/
   - title: 改造
     children:
       - title: "改造策略"
         url: /models/transform-strategic/
+  - title: 守护
+    children:
+      - title: "守护策略"
+        url: /models/guard-strategic/
 
 docs:
   - title: Getting Started
