--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 main:
   - title: "ArchGuard"
     url: /
-  - title: "策略·模式·原则"
+  - title: "原则·模式·策略"
     url: /models/evaluate-strategic/
   - title: "操作手册"
     url: /manuals/env-prepare/
@@ -13,7 +13,7 @@ models:
     children:
       - title: "评估原则"
         url: /models/evaluate-rules/
-      - title: "评估模型"
+      - title: "评估模式"
         url: /models/evaluate-models/
       - title: "评估策略"
         url: /models/evaluate-strategic/
