--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 main:
   - title: "ArchGuard"
     url: /
-  - title: "原则·模式·策略"
+  - title: "策略·模式·方法"
     url: /models/evaluate-strategic/
   - title: "操作手册"
     url: /manuals/env-prepare/
@@ -15,7 +15,7 @@ models:
         url: /models/evaluate-strategic/
       - title: "评估模式"
         url: /models/evaluate-models/
-      - title: "评估原则"
+      - title: "评估方法"
         url: /models/evaluate-rules/
   - title: 改造
     children:
