--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: ""
+title: "ArchGuard"
 # subtitle: Everything as code, every code could be guard
 email: qian.ping@thoughtworks.com
 logo: "/assets/images/logo.png"
